--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.4.1
+beautifulsoup4==4.10.0
 Django==3.2.7
+django-filter==2.4.0
 djangorestframework==3.12.4
+Markdown==3.3.4
+psycopg2==2.9.1
 pytz==2021.1
+soupsieve==2.2.1
 sqlparse==0.4.1
