--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 asgiref==3.4.1
 beautifulsoup4==4.10.0
+dj-database-url==0.5.0
 Django==3.2.7
+django-cors-headers==3.8.0
+django-environ==0.7.0
 django-filter==2.4.0
+django-heroku==0.3.1
 djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
 Markdown==3.3.4
 psycopg2==2.9.1
+PyJWT==2.1.0
 pytz==2021.1
 soupsieve==2.2.1
 sqlparse==0.4.1
+whitenoise==5.3.0
