--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-filter==2.4.0
 django-heroku==0.3.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+gunicorn==20.1.0
 Markdown==3.3.4
 psycopg2==2.9.1
 PyJWT==2.1.0
