--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,17 @@ pytz==2021.1
 soupsieve==2.2.1
 sqlparse==0.4.1
 whitenoise==5.3.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+cryptography==3.4.8
+defusedxml==0.7.1
+dj-rest-auth==2.1.11
+django-allauth==0.45.0
+idna==3.3
+oauthlib==3.1.1
+pycparser==2.20
+python3-openid==3.2.0
+requests==2.26.0
+requests-oauthlib==1.3.0
+urllib3==1.26.7
